estrutura basica do projeto

--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,11 @@
   "require": {},
   "autoload": {
     "psr-4": {
-      "JBP\\Framework\\": "src"
+      "JBP\\Framework\\": "src",
+      "APP\\": "app"
     }
   },
   "scripts": {
-    "server": "php -S localhost:8080"
+    "server": "php -S localhost:8080 -t public"
   }
 }
