--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
     }
   ],
   "require": {
-    "pimple/pimple": "^3.3",
-    "ext-pdo": "*"
+    "pimple/pimple": "^3.3"
   },
   "autoload": {
     "psr-4": {
