--- a/.docker/app/Dockerfile
+++ b/.docker/app/Dockerfile
@@ -3,6 +3,11 @@ FROM php:7.4.10-fpm-alpine3.12
 RUN ["apk", "add", "--no-cache", "openssl", "bash", "shadow", "mysql-client"]
 RUN ["docker-php-ext-install", "pdo", "pdo_mysql"]
 
+ENV DOCKERIZE_VERSION v0.6.1
+RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && tar -C /usr/local/bin -xzvf dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
+    && rm dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+
 WORKDIR /var/www
 RUN rm -rf /var/www/html
 
