--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
   app:
     build: ./.docker/app
     container_name: app
+    entrypoint: dockerize -wait tcp://db:3306 -timeout 40s /var/www/.docker/app/entrypoint.sh
     volumes:
       - .:/var/www:z
     networks:
@@ -23,8 +24,6 @@ services:
       - ./.docker/nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf:z
     networks:
       - app-network
-    links:
-      - "app"
     depends_on:
       - app
 
