--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
   nginx:
     build: ./.docker/nginx
     container_name: nginx
+    entrypoint: dockerize -wait tcp://app:9000 -timeout 40s sh /var/www/.docker/nginx/entrypoint.sh
     restart: always
     tty: true
     ports:
