--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
   ],
   "require": {
     "pimple/pimple": "^3.3",
-    "symfony/http-foundation": "^5.1"
+    "symfony/http-foundation": "^5.1",
+    "laminas/laminas-eventmanager": "^3.3"
   },
   "autoload": {
     "psr-4": {
