--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
   },
   "autoload": {
     "psr-4": {
-      "JBP\\Framework\\": "src",
-      "APP\\": "app"
+      "JBP\\Framework\\": "src"
     }
   },
   "scripts": {
