--- a/.docker/app/Dockerfile
+++ b/.docker/app/Dockerfile
@@ -1,7 +1,9 @@
 FROM php:7.4.10-fpm-alpine3.12
 
-RUN ["apk", "add", "--no-cache", "openssl", "bash", "shadow", "mysql-client"]
+RUN ["apk", "add", "--no-cache", "openssl", "bash", "shadow", "mysql-client", "nodejs", "npm"]
 RUN ["docker-php-ext-install", "pdo", "pdo_mysql"]
+
+RUN ["npm", "install", "-g", "@vue/cli"]
 
 ENV DOCKERIZE_VERSION v0.6.1
 RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-alpine-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
